scrumpoker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrumpoker-service    # < name of the service
  namespace: scrumpoker # < namespace where place the deployment and pods
spec:
  selector:
    app: scrumpoker # < reference to the deployment (connects with this deployment)
  ports:
    - name: webinterface
      protocol: TCP
      port: 8000
